# trix

./: .clang-format  .gitignore  CMakeLists.txt
cmake/modules/: FindSphinx.cmake  SphinxAddDocs.cmake
cmake/toolchains/: i686-elf.cmake
kernel/: .syntastic_clang_config.x86  .vimrc.project  .ycm_extra_conf.py  CMakeLists.txt  HACKING.md  README.md  panic.c  string.c
kernel/arch/arm/: boot.s  platform.c  serial.c
kernel/arch/i686/: gdt.c  idt.c  paging.c  serial.c
kernel/arch/i686/include/: gdt.h  interrupts.h  io.h
kernel/cmake/: arm-none-eabi.cmake  i686-elf.cmake
kernel/docs/: api.rst  arch.rst  boot.rst  conf.py  index.rst
kernel/docs/arch/: arm.rst  i686.rst
kernel/include/: mmio.h  multiboot.h  panic.h  platform.h  serial.h  string.h
kernel/linker/: i686-elf.ld
src/kernel/: .syntastic_clang_config.arm  .syntastic_clang_config.x86  .vimrc.project  FEATURES.md  HACKING.md  Makefile  README.md  main.c  panic.c  string.c
src/kernel/arch/arm/: boot.s  serial.c
src/kernel/arch/arm/config/: Config.mk  linker.ld
src/kernel/arch/i686/: boot.s  interrupts.c  paging.c  platform.c  serial.c
src/kernel/arch/i686/config/: Config.mk  linker.ld
src/kernel/arch/i686/include/: idt.h  io.h  paging.h
src/kernel/include/: platform.h  serial.h
src/kernel/util/: ide  sysinc
src/kernel/util/gdb/: helpers.gdb
src/kernel/util/gdb/helpers/: commands.scm  multiboot.scm  printers.scm
