cmake_minimum_required(VERSION 3.0.0)

set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/modules")

project(
  trixos
  VERSION 0.0.1
  DESCRIPTION "A simple hobby OS"
  LANGUAGES C ASM
)

find_package(Doxygen REQUIRED)
find_package(Sphinx REQUIRED)
include(SphinxAddDocs)

set(DOXYGEN_GENERATE_DOCBOOK NO
    CACHE INTERNAL "")
set(DOXYGEN_GENERATE_HTML NO
    CACHE INTERNAL "")
set(DOXYGEN_GENERATE_LATEX NO
    CACHE INTERNAL "")
set(DOXYGEN_GENERATE_MAN NO
    CACHE INTERNAL "")
set(DOXYGEN_GENERATE_XML YES
    CACHE INTERNAL "")
set(DOXYGEN_FILE_PATTERNS "*.c" "*.h"
    CACHE INTERNAL "")
set(DOXYGEN_TAB_SIZE 2
    CACHE INTERNAL "")
set(DOXYGEN_OPTIMIZE_OUTPUT_FOR_C YES
    CACHE INTERNAL "")
set(DOXYGEN_TYPEDEF_HIDES_STRUCT YES
    CACHE INTERNAL "")
set(DOXYGEN_HIDE_IN_BODY_DOCS YES
    CACHE INTERNAL "")
set(DOXYGEN_SOURCE_BROWSER YES
    CACHE INTERNAL "")
set(DOXYGEN_INLINE_SOURCES YES
    CACHE INTERNAL "")
set(DOXYGEN_REFERENCED_BY_RELATION YES
    CACHE INTERNAL "")
set(DOXYGEN_REFERENCES_RELATION YES
    CACHE INTERNAL "")
set(DOXYGEN_MACRO_EXPANSION YES
    CACHE INTERNAL "")
set(DOXYGEN_EXPAND_ONLY_PREDEF YES
    CACHE INTERNAL "")
set(DOXYGEN_PREDEFINED "__attribute__(x)="
    CACHE INTERNAL "")
set(DOXYGEN_QUIET YES
    CACHE INTERNAL "")
set(DOXYGEN_WARNINGS NO
    CACHE INTERNAL "")
set(DOXYGEN_WARNINGS NO
    CACHE INTERNAL "")
set(DOXYGEN_WARN_IF_UNDOCUMENTED NO
    CACHE INTERNAL "")

add_subdirectory(kernel)
